--- a/ZwajApp.API/appsettings.json
+++ b/ZwajApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token":"muhammad awadallah"
+  },
   "ConnectionStrings":{
     "DefaultConnection":"Data Source = ZwajApp.db"
   },
